--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
     "mysql2": "^3.0.1",
     "node-cron": "^3.0.2",
     "node-fetch": "^3.3.0",
-    "nunjucks": "^3.2.3",
     "process": "^0.11.10",
     "sequelize": "6.28.1",
     "sequelize-cli": "^6.5.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "**/backup/**"
+    ]
   }
 }
