--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "node-fetch": "^3.3.0",
     "process": "^0.11.10",
     "sequelize": "6.28.1",
-    "sequelize-cli": "^6.5.2"
+    "sequelize-cli": "^6.5.2",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
