🧠Refactor(Database) : DB 구조 개선

--- a/.gitignore
+++ b/.gitignore
@@ -250,7 +250,8 @@ dist
 .svelte-kit
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,node
-/.idea/
-/config/
-/public/json/
-/backup/
+
+backup/
+config/
+public/json/
+
