--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blossom-web-backend",
+  "name": "blossom-stats-backend-backend",
   "version": "1.1.1",
   "description": "Blossom Stats, Brawl Stars",
   "main": "app.js",
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Laeti-Park/blossom-web-backend.git"
+    "url": "git+https://github.com/laeti-park/blossom-stats-backend-backend.git"
   },
-  "author": "Laeti-Park",
+  "author": "laeti-park",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Laeti-Park/Blossom-Web/issues"
+    "url": "https://github.com/laeti-park/blossom-stats-backend/issues"
   },
-  "homepage": "https://github.com/Laeti-Park/Blossom-Web#readme",
+  "homepage": "https://github.com/laeti-park/blossom-stats-backend#readme",
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -27,11 +27,10 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.0.1",
     "node-cron": "^3.0.2",
-    "node-fetch": "^3.3.0",
+    "node-fetch": "^3.3.1",
     "process": "^0.11.10",
     "sequelize": "6.28.1",
-    "sequelize-cli": "^6.5.2",
-    "ws": "^8.13.0"
+    "sequelize-cli": "^6.5.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
