--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app"
+    "start": "pm2 start ./config/ecosystem.config.cjs",
+    "dev": "nodemon app"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/laeti-park/blossom-stats-backend-backend.git"
+    "url": "git+https://github.com/laeti-park/blossom-stats-backend.git"
   },
   "author": "laeti-park",
   "license": "ISC",
@@ -19,15 +20,16 @@
   },
   "homepage": "https://github.com/laeti-park/blossom-stats-backend#readme",
   "dependencies": {
+    "axios": "^1.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "morgan": "^1.10.0",
-    "mysql2": "^3.5.1",
+    "mysql2": "^3.5.2",
     "node-cron": "^3.0.2",
-    "node-fetch": "^3.3.1",
+    "node-fetch": "^3.3.2",
     "process": "^0.11.10",
     "sequelize": "6.32.1",
     "sequelize-cli": "^6.6.1"
