--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "pm2 start ./config/ecosystem.config.cjs",
+    "start": "pm2 start ./ecosystem.config.cjs",
     "dev": "nodemon app"
   },
   "repository": {
@@ -16,26 +16,27 @@
   "author": "laeti-park",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/laeti-park/blossom-stats-backend/issues"
+    "url": "https://github.com/laetipark/blossom-stats-backend/issues"
   },
-  "homepage": "https://github.com/laeti-park/blossom-stats-backend#readme",
+  "homepage": "https://github.com/laetipark/blossom-stats-backend#readme",
   "dependencies": {
     "axios": "^1.5.0",
-    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "morgan": "^1.10.0",
     "mysql2": "^3.5.2",
     "node-cron": "^3.0.2",
     "node-fetch": "^3.3.2",
-    "process": "^0.11.10",
+    "pm2": "^5.3.0",
+    "prettier": "^2.8.8",
     "sequelize": "6.32.1",
     "sequelize-cli": "^6.6.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^3.0.1"
   },
   "nodemonConfig": {
     "ignore": [
