✨Feat(main): 프로젝트 Typescript로 변환, typeorm 변환

--- a/.gitignore
+++ b/.gitignore
@@ -250,9 +250,10 @@ dist
 .svelte-kit
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,node
+configs
+configs/*
 
-backup/
-config/
 public/json/
+public/json/*
 
-/ecosystem.config.cjs
+ecosystem.config.cjs
