--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "brawltree-scheduler",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Plant Brawl Tree",
-  "main": "app.js",
-  "type": "module",
+  "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
   "scripts": {
+    "build": "tsc -p tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "pm2 start ./ecosystem.config.cjs",
-    "dev": "nodemon app"
+    "dev": "cross-env NODE_ENV=development nodemon -e ts,js --exec ts-node -r tsconfig-paths/register src/app.ts"
   },
   "repository": {
     "type": "git",
@@ -21,28 +21,33 @@
   },
   "homepage": "https://github.com/laetipark/brawltree-scheduler#readme",
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/node-cron": "^3.0.9",
     "axios": "^1.5.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
-    "morgan": "^1.10.0",
-    "mysql2": "^3.6.1",
+    "mysql2": "^3.6.2",
     "node-cron": "^3.0.2",
-    "node-fetch": "^3.3.2",
-    "sequelize": "6.33.0",
-    "sequelize-cli": "^6.6.1"
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.2",
     "@babel/eslint-parser": "^7.22.15",
     "@babel/plugin-syntax-import-assertions": "^7.22.5",
+    "@types/node": "^20.8.7",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
+    "babel-eslint": "^10.1.0",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "npm": "^10.2.0",
     "pm2": "^5.3.0",
-    "prettier": "^3.0.3"
-  },
-  "nodemonConfig": {
-    "ignore": [
-      "**/backup/**"
-    ]
+    "prettier": "^3.0.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2"
   }
 }
