--- a/package.json
+++ b/package.json
@@ -1,53 +1,78 @@
 {
-  "name": "brawltree-scheduler",
-  "private": true,
-  "version": "1.0.2",
+  "name": "brawltree-crawler",
+  "version": "2.0.0",
   "description": "Plant Brawl Tree",
-  "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+  "author": "laetipark",
+  "private": true,
+  "license": "UNLICENSED",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "pm2 start ./ecosystem.config.cjs",
-    "dev": "cross-env NODE_ENV=development nodemon -e ts,js --exec ts-node -r tsconfig-paths/register src/app.ts"
+    "start:dev": "cross-env NODE_ENV=development nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/laetipark/brawltree-scheduler.git"
-  },
-  "author": "laeti-park",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/laetipark/brawltree-scheduler/issues"
-  },
-  "homepage": "https://github.com/laetipark/brawltree-scheduler#readme",
   "dependencies": {
-    "@types/dotenv": "^8.2.0",
-    "@types/node-cron": "^3.0.9",
-    "axios": "^1.5.1",
-    "cors": "^2.8.5",
+    "@nestjs/axios": "^3.0.0",
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "^2.0.2",
+    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^3.0.4",
+    "@nestjs/typeorm": "^10.0.0",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.3.1",
     "mysql2": "^3.6.2",
-    "node-cron": "^3.0.2",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.2",
-    "@babel/eslint-parser": "^7.22.15",
-    "@babel/plugin-syntax-import-assertions": "^7.22.5",
-    "@types/node": "^20.8.7",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
-    "@typescript-eslint/parser": "^6.8.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^8.51.0",
+    "@nestjs/schematics": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.1",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "npm": "^10.2.0",
-    "pm2": "^5.3.0",
-    "prettier": "^3.0.3",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "tslib": "^2.6.2",
-    "typescript": "^5.2.2"
+    "jest": "^29.5.0",
+    "prettier": "^3.0.0",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.3",
+    "tsconfig-paths": "^4.2.0"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/laetipark/brawltree-crawler.git"
   }
 }
