--- a/package.json
+++ b/package.json
@@ -7,17 +7,25 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "pm2 start ./ecosystem.config.cjs",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "cross-env NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "node -r tsconfig-paths/register -r ts-node/register ./node_modules/typeorm/cli",
+    "typeorm:migration": "node -r tsconfig-paths/register -r ts-node/register ./node_modules/typeorm/cli -d ./src/database/data-source.ts",
+    "migration:create": "npm run typeorm migration:create ./src/database/migrations/brawltree",
+    "migration:generate": "npm run typeorm:migration migration:generate ./src/database/migrations/brawltree",
+    "migration:run": "cross-env MIGRATION_TYPE=migrations npm run typeorm:migration migration:run",
+    "migration:revert": "cross-env MIGRATION_TYPE=migrations npm run typeorm:migration migration:revert",
+    "seed:create": "npm run typeorm migration:create ./src/database/seeds/brawltree",
+    "seed:run": "cross-env MIGRATION_TYPE=seeds npm run typeorm:migration migration:run",
+    "seed:revert": "cross-env MIGRATION_TYPE=seeds npm run typeorm:migration migration:revert"
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.0",
@@ -29,6 +37,8 @@
     "@nestjs/schedule": "^3.0.4",
     "@nestjs/typeorm": "^10.0.0",
     "@types/oracledb": "^6.0.2",
+    "axios": "^1.6.2",
+    "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
     "mysql2": "^3.6.2",
     "oracledb": "^5.5.0",
@@ -45,6 +55,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "dotenv": "^16.3.1",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -71,7 +82,14 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "roots": [
+      "<rootDir>/src/",
+      "<rootDir>/libs/"
+    ],
+    "moduleNameMapper": {
+      "^@app/users(|/.*)$": "<rootDir>/libs/users/src/$1"
+    }
   },
   "repository": {
     "type": "git",
