--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
+    "start": "nest start",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "cross-env NODE_ENV=production node dist/main",
@@ -28,43 +29,42 @@
     "seed:revert": "cross-env MIGRATION_TYPE=seeds npm run typeorm:migration migration:revert"
   },
   "dependencies": {
-    "@nestjs/axios": "^3.0.0",
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/axios": "^3.0.1",
+    "@nestjs/common": "^10.2.10",
     "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/mapped-types": "^2.0.2",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/schedule": "^3.0.4",
-    "@nestjs/typeorm": "^10.0.0",
-    "@types/oracledb": "^6.0.2",
+    "@nestjs/core": "^10.2.10",
+    "@nestjs/mapped-types": "^2.0.4",
+    "@nestjs/platform-express": "^10.2.10",
+    "@nestjs/schedule": "^4.0.0",
+    "@nestjs/typeorm": "^10.0.1",
+    "@types/oracledb": "^6.0.4",
     "axios": "^1.6.2",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
-    "mysql2": "^3.6.2",
-    "oracledb": "^5.5.0",
+    "mysql2": "^3.6.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@nestjs/schematics": "^10.0.3",
+    "@nestjs/testing": "^10.2.10",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.10",
+    "@types/node": "^20.9.4",
+    "@types/supertest": "^2.0.16",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
     "dotenv": "^16.3.1",
-    "eslint": "^8.42.0",
+    "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
-    "prettier": "^3.0.0",
+    "prettier": "^3.1.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
+    "ts-loader": "^9.5.1",
     "tsconfig-paths": "^4.2.0"
   },
   "jest": {
