🍎Chore: 환경 변수 변경

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "seed:run": "cross-env MIGRATION_TYPE=seeds npm run typeorm:migration migration:run",
     "start": "nest start",
     "start:debug": "nest start --debug --watch",
-    "start:dev": "cross-env NODE_ENV=development nest start --watch",
-    "start:prod": "cross-env NODE_ENV=production node dist/main",
+    "start:dev": "nest start --watch",
+    "start:prod": "pm2 start ./ecosystem.config.cjs",
     "test": "jest",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -43,7 +43,6 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "mysql2": "^3.6.5",
-    "pm2": "^5.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "tsconfig-paths": "^4.2.0",
