--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,9 @@
       "~/config/*": [
         "./src/config/*"
       ],
+      "~/crew/*": [
+        "./src/features/crew/*"
+      ],
       "~/database/*": [
         "./src/database/*"
       ],
