Feat(Brawlers): Brawler Items, Brawler Skills 추가

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "seed:create": "npm run typeorm migration:create ./src/database/seeds/brawltree",
     "seed:revert": "cross-env MIGRATION_TYPE=seeds npm run typeorm:migration migration:revert",
     "seed:run": "cross-env MIGRATION_TYPE=seeds npm run typeorm:migration migration:run",
-    "start": "nest start",
+    "start": "cross-env NODE_ENV=production node dist/main.js",
     "start:debug": "nest start --debug --watch",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:prod": "pm2 start ./ecosystem.config.cjs",
@@ -39,6 +39,7 @@
     "@nestjs/typeorm": "^10.0.1",
     "@types/oracledb": "^6.0.4",
     "axios": "^1.6.3",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
