Refactor(Utils): utils 코드 수정

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "seed:create": "npm run typeorm migration:create ./src/database/seeds/brawltree",
     "seed:revert": "cross-env MIGRATION_TYPE=seeds npm run typeorm:migration migration:revert",
     "seed:run": "cross-env MIGRATION_TYPE=seeds npm run typeorm:migration migration:run",
-    "start": "cross-env NODE_ENV=production node dist/main.js",
+    "start": "cross-env NODE_ENV=production node --inspect dist/crawler.js",
     "start:debug": "nest start --debug --watch",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:prod": "pm2 start ./ecosystem.config.cjs",
