--- a/package.json
+++ b/package.json
@@ -30,28 +30,33 @@
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.1",
+    "@nestjs/cache-manager": "^2.2.1",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
     "@nestjs/mapped-types": "^2.0.4",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/schedule": "^4.0.0",
-    "@nestjs/typeorm": "^10.0.1",
+    "@nestjs/typeorm": "^10.0.2",
     "@types/oracledb": "^6.0.4",
     "axios": "^1.6.3",
+    "cache-manager": "^5.4.0",
+    "cache-manager-ioredis": "^2.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
-    "mysql2": "^3.6.5",
+    "mysql2": "^3.9.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "tsconfig-paths": "^4.2.0",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/schematics": "^10.0.3",
     "@nestjs/testing": "^10.2.10",
+    "@types/cache-manager": "^4.0.6",
+    "@types/cache-manager-ioredis": "^2.0.6",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.10",
     "@types/node": "^20.9.4",
