--- a/.production.env.sample
+++ b/.production.env.sample
@@ -1,9 +1,12 @@
 HOST_PORT=
-CRAWLER_PORT=
+WORKER_PORT=
+SCHEDULER_PORT=
 DATABASE_HOST=
 DATABASE_PORT=
 DATABASE_USERNAME=
 DATABASE_PASSWORD=
 DATABASE_NAME=
 DATABASE_TIMEZONE=
+REDIS_HOST=
+REDIS_PORT=
 API_KEY=
