--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "seed:create": "npm run typeorm migration:create ./src/database/seeds/brawltree",
     "seed:revert": "cross-env MIGRATION_TYPE=seeds npm run typeorm:migration migration:revert",
     "seed:run": "cross-env MIGRATION_TYPE=seeds npm run typeorm:migration migration:run",
-    "start": "cross-env NODE_ENV=production node --inspect dist/crawler.js",
-    "start:debug": "nest start --debug --watch",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
+    "start:worker": "cross-env NODE_ENV=production node --inspect --watch dist/worker.js",
+    "start:scheduler": "cross-env NODE_ENV=production node --inspect --watch dist/scheduler.js",
+    "start:debug": "nest start --debug --watch",
     "start:prod": "pm2 start ./ecosystem.config.cjs",
     "test": "jest",
     "test:cov": "jest --coverage",
