--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@nestjs/axios": "^3.0.2",
     "@nestjs/cache-manager": "^2.2.1",
+    "@nestjs/cli": "^10.3.2",
     "@nestjs/common": "^10.3.3",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.3.3",
